<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/spash_icon"
        android:layout_marginBottom="20dp"/>


    <EditText
        android:id="@+id/signin_emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="#c1ffffff"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:background="#c1ffffff">

        <EditText
            android:id="@+id/signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:layout_weight="1"
            android:background="@null" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_visibility_off"
            android:id="@+id/password_show_btn"
            android:padding="5dp"
            android:background="@null"/>

    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ffffff"
        android:text="@string/forgot_password"
        android:gravity="end"
        android:textStyle="bold"
        android:visibility="invisible"
        android:layout_marginRight="20dp"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/signinbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.06"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:text="@string/sign_in"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signup_dialog"
        android:layout_width="330dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:background="#00ffffff"
        android:text="@string/click_to_sign_up"
        android:textAllCaps="false" />

</LinearLayout>